Election results shown as pending as long as not final

--- a/src/onegov/election_day/locale/fr_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/fr_CH/LC_MESSAGES/onegov.election_day.po
@@ -1139,6 +1139,9 @@ msgstr "Oui"
 msgid "No"
 msgstr "Non"
 
+msgid "Pending"
+msgstr "On cours"
+
 msgid "All candidates"
 msgstr "Tous les candidats"
 
