--- a/src/onegov/election_day/locale/it_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/it_CH/LC_MESSAGES/onegov.election_day.po
@@ -1133,6 +1133,9 @@ msgstr "Si"
 msgid "No"
 msgstr "No"
 
+msgid "Pending"
+msgstr "In attesa"
+
 msgid "All candidates"
 msgstr "Tutti i candidati"
 
