Fixes German translation

--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -1021,7 +1021,7 @@ msgid "Grid layout"
 msgstr "Raster"
 
 msgid "By filename"
-msgstr "Nach Name"
+msgstr "Nach Dateiname"
 
 msgid "By caption"
 msgstr "Nach Beschreibung"
