--- a/src/onegov/feriennet/locale/fr_CH/LC_MESSAGES/onegov.feriennet.po
+++ b/src/onegov/feriennet/locale/fr_CH/LC_MESSAGES/onegov.feriennet.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-01-06 10:50+0100\n"
+"POT-Creation-Date: 2025-01-13 14:02+0100\n"
 "PO-Revision-Date: 2021-11-11 09:07+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: French\n"
@@ -28,6 +28,9 @@ msgstr "Réservation : ${dates}"
 #, python-format
 msgid "Execution: ${dates}"
 msgstr "Réalisation : ${dates}"
+
+msgid "Activities"
+msgstr "Activités"
 
 #, python-format
 msgid "${count} Activities"
@@ -169,9 +172,6 @@ msgstr "Factures"
 
 msgid "Wishlist"
 msgstr "Liste des souhaits"
-
-msgid "Activities"
-msgstr "Activités"
 
 msgid "Activity Title"
 msgstr "Titre activité"
@@ -1137,8 +1137,26 @@ msgstr "Début de la réservation"
 msgid "Booking End"
 msgstr "Fin de la réservation"
 
+msgid "Stop accepting bookings"
+msgstr "Ne plus accepter de réservations"
+
+msgid "Deadline"
+msgstr "Délai d'inscription"
+
+msgid "At the end of the booking phase"
+msgstr "À la fin de la phase de réservation"
+
+msgid "X days before each occasion"
+msgstr "X jours avant chaque événement"
+
+msgid "X Days Before"
+msgstr "X jours avant"
+
 msgid "Execution Start"
 msgstr "Début de l'événement"
+
+msgid "Execution phase"
+msgstr "Phase de l'événement"
 
 msgid "Execution End"
 msgstr "Fin de l'événement"
@@ -1206,21 +1224,6 @@ msgstr "Oui"
 
 msgid "No"
 msgstr "Non"
-
-msgid "Stop accepting bookings"
-msgstr "Ne plus accepter de réservations"
-
-msgid "Deadline"
-msgstr "Délai d'inscription"
-
-msgid "At the end of the booking phase"
-msgstr "À la fin de la phase de réservation"
-
-msgid "X days before each occasion"
-msgstr "X jours avant chaque événement"
-
-msgid "X Days Before"
-msgstr "X jours avant"
 
 msgid "Allow bookings after the bills have been created."
 msgstr "Autoriser les réservations après la création des factures."
@@ -1592,9 +1595,6 @@ msgid "Could not add item. It overlaps with another item in your list."
 msgstr ""
 "Cet élément ne peut pas être ajouté. Il se chevauche avec un autre élément "
 "de votre liste."
-
-msgid "My list"
-msgstr "Ma liste"
 
 msgid ""
 "Join us as a volunteer. Select the activities you are interested in and fill "
@@ -2233,6 +2233,9 @@ msgstr "Aucune activité dans votre liste."
 
 msgid "Register as volunteer"
 msgstr "S'inscrire comme bénévole"
+
+msgid "My List"
+msgstr "Ma liste"
 
 msgid "Hello!"
 msgstr "Bonjour"
@@ -3249,6 +3252,9 @@ msgstr "Réservations pour ${period}"
 #, python-format
 msgid "Billing for ${period}"
 msgstr "Facturation pour ${period}"
+
+#~ msgid "My list"
+#~ msgstr "Ma liste"
 
 #~ msgid "Leave Group"
 #~ msgstr "Quitter le groupe"
