--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -2190,6 +2190,9 @@ msgstr ""
 msgid "New Note"
 msgstr "Nouveau commentaire"
 
+msgid "This recipient has delivery failures, including hard bounces, invalid email addresses, spam complaints, manual deactivations, or being blocked. We recommend unsubscribing it from the list."
+msgstr "Ce destinataire a des échecs de livraison, y compris des rebonds, des adresses e-mail invalides, des plaintes pour spam, des désactivations manuelles, ou est bloqué. Nous recommandons de le désinscrire de la liste."
+
 #~ msgid "Sign up to our newsletter to always stay up to date:"
 #~ msgstr ""
 #~ "Abonnez-vous à notre lettre d'informations pour rester au courant en "
